// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render FoodForm correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FoodForm />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="form__row"
>
          <div
                    className="form__group form__group--50"
          >
                    <input
                              className="form__input"
                              name="name"
                              onBlur={[Function]}
                              onChange={[Function]}
                              placeholder="Food"
                              type="text"
                              value=""
                    />
                    <label
                              className="form__label"
                              htmlFor="name"
                    >
                              Food
                    </label>
          </div>
          <div
                    className="form__group form__group--50"
          >
                    <input
                              className="form__input"
                              name="amountWithUnits"
                              onBlur={[Function]}
                              onChange={[Function]}
                              placeholder="Amount"
                              type="text"
                              value=""
                    />
                    <label
                              className="form__label"
                              htmlFor="amountWithUnits"
                    >
                              Amount
                    </label>
          </div>
</div>,
        <div
          className="form__row"
>
          <div
                    className="form__group form__group--100"
          >
                    <input
                              className="form__input"
                              name="macros"
                              onBlur={[Function]}
                              onChange={[Function]}
                              placeholder="Macros"
                              type="text"
                              value=""
                    />
                    <label
                              className="form__label"
                              htmlFor="macros"
                    >
                              Carbohydrates Protein Fat Calories (spaces in between)
                    </label>
          </div>
</div>,
        <div
          className="form__row"
>
          <div
                    className="form__group--right"
          >
                    <button
                              className="btn btn--form btn--disabled"
                    >
                              Submit
                    </button>
          </div>
</div>,
      ],
      "className": "form",
      "onSubmit": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            Array [
              <div
                className="form__group form__group--50"
>
                <input
                                className="form__input"
                                name="name"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="Food"
                                type="text"
                                value=""
                />
                <label
                                className="form__label"
                                htmlFor="name"
                >
                                Food
                </label>
</div>,
            ],
            Array [
              <div
                className="form__group form__group--50"
>
                <input
                                className="form__input"
                                name="amountWithUnits"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="Amount"
                                type="text"
                                value=""
                />
                <label
                                className="form__label"
                                htmlFor="amountWithUnits"
                >
                                Amount
                </label>
</div>,
            ],
          ],
          "className": "form__row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "nameInput",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  className="form__input"
                  name="name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="Food"
                  type="text"
                  value=""
/>,
                <label
                  className="form__label"
                  htmlFor="name"
>
                  Food
</label>,
              ],
              "className": "form__group form__group--50",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form__input",
                  "name": "name",
                  "onBlur": [Function],
                  "onChange": [Function],
                  "placeholder": "Food",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Food",
                  "className": "form__label",
                  "htmlFor": "name",
                },
                "ref": null,
                "rendered": "Food",
                "type": "label",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "amountUnitInput",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  className="form__input"
                  name="amountWithUnits"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="Amount"
                  type="text"
                  value=""
/>,
                <label
                  className="form__label"
                  htmlFor="amountWithUnits"
>
                  Amount
</label>,
              ],
              "className": "form__group form__group--50",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form__input",
                  "name": "amountWithUnits",
                  "onBlur": [Function],
                  "onChange": [Function],
                  "placeholder": "Amount",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Amount",
                  "className": "form__label",
                  "htmlFor": "amountWithUnits",
                },
                "ref": null,
                "rendered": "Amount",
                "type": "label",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="form__group form__group--100"
>
              <input
                            className="form__input"
                            name="macros"
                            onBlur={[Function]}
                            onChange={[Function]}
                            placeholder="Macros"
                            type="text"
                            value=""
              />
              <label
                            className="form__label"
                            htmlFor="macros"
              >
                            Carbohydrates Protein Fat Calories (spaces in between)
              </label>
</div>,
          ],
          "className": "form__row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "macrosInput",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  className="form__input"
                  name="macros"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="Macros"
                  type="text"
                  value=""
/>,
                <label
                  className="form__label"
                  htmlFor="macros"
>
                  Carbohydrates Protein Fat Calories (spaces in between)
</label>,
              ],
              "className": "form__group form__group--100",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form__input",
                  "name": "macros",
                  "onBlur": [Function],
                  "onChange": [Function],
                  "placeholder": "Macros",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Carbohydrates Protein Fat Calories (spaces in between)",
                  "className": "form__label",
                  "htmlFor": "macros",
                },
                "ref": null,
                "rendered": "Carbohydrates Protein Fat Calories (spaces in between)",
                "type": "label",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="form__group--right"
>
            <button
                        className="btn btn--form btn--disabled"
            >
                        Submit
            </button>
</div>,
          "className": "form__row",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <button
              className="btn btn--form btn--disabled"
>
              Submit
</button>,
            "className": "form__group--right",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Submit",
              "className": "btn btn--form btn--disabled",
            },
            "ref": null,
            "rendered": "Submit",
            "type": "button",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "form",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="form__row"
>
            <div
                        className="form__group form__group--50"
            >
                        <input
                                    className="form__input"
                                    name="name"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    placeholder="Food"
                                    type="text"
                                    value=""
                        />
                        <label
                                    className="form__label"
                                    htmlFor="name"
                        >
                                    Food
                        </label>
            </div>
            <div
                        className="form__group form__group--50"
            >
                        <input
                                    className="form__input"
                                    name="amountWithUnits"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    placeholder="Amount"
                                    type="text"
                                    value=""
                        />
                        <label
                                    className="form__label"
                                    htmlFor="amountWithUnits"
                        >
                                    Amount
                        </label>
            </div>
</div>,
          <div
            className="form__row"
>
            <div
                        className="form__group form__group--100"
            >
                        <input
                                    className="form__input"
                                    name="macros"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    placeholder="Macros"
                                    type="text"
                                    value=""
                        />
                        <label
                                    className="form__label"
                                    htmlFor="macros"
                        >
                                    Carbohydrates Protein Fat Calories (spaces in between)
                        </label>
            </div>
</div>,
          <div
            className="form__row"
>
            <div
                        className="form__group--right"
            >
                        <button
                                    className="btn btn--form btn--disabled"
                        >
                                    Submit
                        </button>
            </div>
</div>,
        ],
        "className": "form",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              Array [
                <div
                  className="form__group form__group--50"
>
                  <input
                                    className="form__input"
                                    name="name"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    placeholder="Food"
                                    type="text"
                                    value=""
                  />
                  <label
                                    className="form__label"
                                    htmlFor="name"
                  >
                                    Food
                  </label>
</div>,
              ],
              Array [
                <div
                  className="form__group form__group--50"
>
                  <input
                                    className="form__input"
                                    name="amountWithUnits"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    placeholder="Amount"
                                    type="text"
                                    value=""
                  />
                  <label
                                    className="form__label"
                                    htmlFor="amountWithUnits"
                  >
                                    Amount
                  </label>
</div>,
              ],
            ],
            "className": "form__row",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "nameInput",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    className="form__input"
                    name="name"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Food"
                    type="text"
                    value=""
/>,
                  <label
                    className="form__label"
                    htmlFor="name"
>
                    Food
</label>,
                ],
                "className": "form__group form__group--50",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "form__input",
                    "name": "name",
                    "onBlur": [Function],
                    "onChange": [Function],
                    "placeholder": "Food",
                    "type": "text",
                    "value": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Food",
                    "className": "form__label",
                    "htmlFor": "name",
                  },
                  "ref": null,
                  "rendered": "Food",
                  "type": "label",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "amountUnitInput",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    className="form__input"
                    name="amountWithUnits"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Amount"
                    type="text"
                    value=""
/>,
                  <label
                    className="form__label"
                    htmlFor="amountWithUnits"
>
                    Amount
</label>,
                ],
                "className": "form__group form__group--50",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "form__input",
                    "name": "amountWithUnits",
                    "onBlur": [Function],
                    "onChange": [Function],
                    "placeholder": "Amount",
                    "type": "text",
                    "value": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Amount",
                    "className": "form__label",
                    "htmlFor": "amountWithUnits",
                  },
                  "ref": null,
                  "rendered": "Amount",
                  "type": "label",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="form__group form__group--100"
>
                <input
                                className="form__input"
                                name="macros"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="Macros"
                                type="text"
                                value=""
                />
                <label
                                className="form__label"
                                htmlFor="macros"
                >
                                Carbohydrates Protein Fat Calories (spaces in between)
                </label>
</div>,
            ],
            "className": "form__row",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "macrosInput",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    className="form__input"
                    name="macros"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Macros"
                    type="text"
                    value=""
/>,
                  <label
                    className="form__label"
                    htmlFor="macros"
>
                    Carbohydrates Protein Fat Calories (spaces in between)
</label>,
                ],
                "className": "form__group form__group--100",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "form__input",
                    "name": "macros",
                    "onBlur": [Function],
                    "onChange": [Function],
                    "placeholder": "Macros",
                    "type": "text",
                    "value": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Carbohydrates Protein Fat Calories (spaces in between)",
                    "className": "form__label",
                    "htmlFor": "macros",
                  },
                  "ref": null,
                  "rendered": "Carbohydrates Protein Fat Calories (spaces in between)",
                  "type": "label",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="form__group--right"
>
              <button
                            className="btn btn--form btn--disabled"
              >
                            Submit
              </button>
</div>,
            "className": "form__row",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <button
                className="btn btn--form btn--disabled"
>
                Submit
</button>,
              "className": "form__group--right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Submit",
                "className": "btn btn--form btn--disabled",
              },
              "ref": null,
              "rendered": "Submit",
              "type": "button",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "form",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should render Foodfrom with food data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FoodForm
    food={
        Object {
            "amount": 100,
            "calories": 165,
            "carbohydrates": 0,
            "createdAt": 1000,
            "fat": 3.6,
            "id": "2",
            "name": "Chicken Breast",
            "protein": 31,
            "timesUsed": 1,
            "unit": "grams",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="form__row"
>
          <div
                    className="form__group form__group--50"
          >
                    <input
                              className="form__input"
                              name="name"
                              onBlur={[Function]}
                              onChange={[Function]}
                              placeholder="Food"
                              type="text"
                              value="Chicken Breast"
                    />
                    <label
                              className="form__label"
                              htmlFor="name"
                    >
                              Food
                    </label>
          </div>
          <div
                    className="form__group form__group--25"
          >
                    <input
                              className="form__input"
                              name="amount"
                              onChange={[Function]}
                              placeholder="Amount"
                              type="text"
                              value={100}
                    />
                    <label
                              className="form__label"
                              htmlFor="amount"
                    >
                              Amount
                    </label>
          </div>
          <div
                    className="form__group form__group--25"
          >
                    <input
                              className="form__input"
                              name="unit"
                              onBlur={[Function]}
                              onChange={[Function]}
                              placeholder="Unit"
                              type="text"
                              value="grams"
                    />
                    <label
                              className="form__label"
                              htmlFor="unit"
                    >
                              Unit
                    </label>
          </div>
</div>,
        <div
          className="form__row"
>
          <div
                    className="form__group form__group--25"
          >
                    <input
                              className="form__input"
                              name="carbohydrates"
                              onChange={[Function]}
                              placeholder="Carbs"
                              type="text"
                              value={0}
                    />
                    <label
                              className="form__label"
                              htmlFor="carbohydrates"
                    >
                              Carbs
                    </label>
          </div>
          <div
                    className="form__group form__group--25"
          >
                    <input
                              className="form__input"
                              onChange={[Function]}
                              placeholder="Protein"
                              type="text"
                              value={31}
                    />
                    <label
                              className="form__label"
                              htmlFor="Protein"
                    >
                              Protein
                    </label>
          </div>
          <div
                    className="form__group form__group--25"
          >
                    <input
                              className="form__input"
                              onChange={[Function]}
                              placeholder="Fat"
                              type="text"
                              value={3.6}
                    />
                    <label
                              className="form__label"
                              htmlFor="Fat"
                    >
                              Fat
                    </label>
          </div>
          <div
                    className="form__group form__group--25"
          >
                    <input
                              className="form__input"
                              onChange={[Function]}
                              placeholder="Calories"
                              type="text"
                              value={165}
                    />
                    <label
                              className="form__label"
                              htmlFor="Calories"
                    >
                              Calories
                    </label>
          </div>
</div>,
        <div
          className="form__row"
>
          <div
                    className="form__group--right"
          >
                    <button
                              className="btn btn--form"
                    >
                              Submit
                    </button>
          </div>
</div>,
      ],
      "className": "form",
      "onSubmit": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            Array [
              <div
                className="form__group form__group--50"
>
                <input
                                className="form__input"
                                name="name"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="Food"
                                type="text"
                                value="Chicken Breast"
                />
                <label
                                className="form__label"
                                htmlFor="name"
                >
                                Food
                </label>
</div>,
            ],
            Array [
              <div
                className="form__group form__group--25"
>
                <input
                                className="form__input"
                                name="amount"
                                onChange={[Function]}
                                placeholder="Amount"
                                type="text"
                                value={100}
                />
                <label
                                className="form__label"
                                htmlFor="amount"
                >
                                Amount
                </label>
</div>,
              <div
                className="form__group form__group--25"
>
                <input
                                className="form__input"
                                name="unit"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="Unit"
                                type="text"
                                value="grams"
                />
                <label
                                className="form__label"
                                htmlFor="unit"
                >
                                Unit
                </label>
</div>,
            ],
          ],
          "className": "form__row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "nameInput",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  className="form__input"
                  name="name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="Food"
                  type="text"
                  value="Chicken Breast"
/>,
                <label
                  className="form__label"
                  htmlFor="name"
>
                  Food
</label>,
              ],
              "className": "form__group form__group--50",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form__input",
                  "name": "name",
                  "onBlur": [Function],
                  "onChange": [Function],
                  "placeholder": "Food",
                  "type": "text",
                  "value": "Chicken Breast",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Food",
                  "className": "form__label",
                  "htmlFor": "name",
                },
                "ref": null,
                "rendered": "Food",
                "type": "label",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "amountInput",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  className="form__input"
                  name="amount"
                  onChange={[Function]}
                  placeholder="Amount"
                  type="text"
                  value={100}
/>,
                <label
                  className="form__label"
                  htmlFor="amount"
>
                  Amount
</label>,
              ],
              "className": "form__group form__group--25",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form__input",
                  "name": "amount",
                  "onChange": [Function],
                  "placeholder": "Amount",
                  "type": "text",
                  "value": 100,
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Amount",
                  "className": "form__label",
                  "htmlFor": "amount",
                },
                "ref": null,
                "rendered": "Amount",
                "type": "label",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "unitInput",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  className="form__input"
                  name="unit"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="Unit"
                  type="text"
                  value="grams"
/>,
                <label
                  className="form__label"
                  htmlFor="unit"
>
                  Unit
</label>,
              ],
              "className": "form__group form__group--25",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form__input",
                  "name": "unit",
                  "onBlur": [Function],
                  "onChange": [Function],
                  "placeholder": "Unit",
                  "type": "text",
                  "value": "grams",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Unit",
                  "className": "form__label",
                  "htmlFor": "unit",
                },
                "ref": null,
                "rendered": "Unit",
                "type": "label",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="form__group form__group--25"
>
              <input
                            className="form__input"
                            name="carbohydrates"
                            onChange={[Function]}
                            placeholder="Carbs"
                            type="text"
                            value={0}
              />
              <label
                            className="form__label"
                            htmlFor="carbohydrates"
              >
                            Carbs
              </label>
</div>,
            <div
              className="form__group form__group--25"
>
              <input
                            className="form__input"
                            onChange={[Function]}
                            placeholder="Protein"
                            type="text"
                            value={31}
              />
              <label
                            className="form__label"
                            htmlFor="Protein"
              >
                            Protein
              </label>
</div>,
            <div
              className="form__group form__group--25"
>
              <input
                            className="form__input"
                            onChange={[Function]}
                            placeholder="Fat"
                            type="text"
                            value={3.6}
              />
              <label
                            className="form__label"
                            htmlFor="Fat"
              >
                            Fat
              </label>
</div>,
            <div
              className="form__group form__group--25"
>
              <input
                            className="form__input"
                            onChange={[Function]}
                            placeholder="Calories"
                            type="text"
                            value={165}
              />
              <label
                            className="form__label"
                            htmlFor="Calories"
              >
                            Calories
              </label>
</div>,
          ],
          "className": "form__row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "carbohydratesInput",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  className="form__input"
                  name="carbohydrates"
                  onChange={[Function]}
                  placeholder="Carbs"
                  type="text"
                  value={0}
/>,
                <label
                  className="form__label"
                  htmlFor="carbohydrates"
>
                  Carbs
</label>,
              ],
              "className": "form__group form__group--25",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form__input",
                  "name": "carbohydrates",
                  "onChange": [Function],
                  "placeholder": "Carbs",
                  "type": "text",
                  "value": 0,
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Carbs",
                  "className": "form__label",
                  "htmlFor": "carbohydrates",
                },
                "ref": null,
                "rendered": "Carbs",
                "type": "label",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "proteinInput",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  className="form__input"
                  onChange={[Function]}
                  placeholder="Protein"
                  type="text"
                  value={31}
/>,
                <label
                  className="form__label"
                  htmlFor="Protein"
>
                  Protein
</label>,
              ],
              "className": "form__group form__group--25",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form__input",
                  "onChange": [Function],
                  "placeholder": "Protein",
                  "type": "text",
                  "value": 31,
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Protein",
                  "className": "form__label",
                  "htmlFor": "Protein",
                },
                "ref": null,
                "rendered": "Protein",
                "type": "label",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "fatInput",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  className="form__input"
                  onChange={[Function]}
                  placeholder="Fat"
                  type="text"
                  value={3.6}
/>,
                <label
                  className="form__label"
                  htmlFor="Fat"
>
                  Fat
</label>,
              ],
              "className": "form__group form__group--25",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form__input",
                  "onChange": [Function],
                  "placeholder": "Fat",
                  "type": "text",
                  "value": 3.6,
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Fat",
                  "className": "form__label",
                  "htmlFor": "Fat",
                },
                "ref": null,
                "rendered": "Fat",
                "type": "label",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "caloriesInput",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  className="form__input"
                  onChange={[Function]}
                  placeholder="Calories"
                  type="text"
                  value={165}
/>,
                <label
                  className="form__label"
                  htmlFor="Calories"
>
                  Calories
</label>,
              ],
              "className": "form__group form__group--25",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form__input",
                  "onChange": [Function],
                  "placeholder": "Calories",
                  "type": "text",
                  "value": 165,
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Calories",
                  "className": "form__label",
                  "htmlFor": "Calories",
                },
                "ref": null,
                "rendered": "Calories",
                "type": "label",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="form__group--right"
>
            <button
                        className="btn btn--form"
            >
                        Submit
            </button>
</div>,
          "className": "form__row",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <button
              className="btn btn--form"
>
              Submit
</button>,
            "className": "form__group--right",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Submit",
              "className": "btn btn--form",
            },
            "ref": null,
            "rendered": "Submit",
            "type": "button",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "form",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="form__row"
>
            <div
                        className="form__group form__group--50"
            >
                        <input
                                    className="form__input"
                                    name="name"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    placeholder="Food"
                                    type="text"
                                    value="Chicken Breast"
                        />
                        <label
                                    className="form__label"
                                    htmlFor="name"
                        >
                                    Food
                        </label>
            </div>
            <div
                        className="form__group form__group--25"
            >
                        <input
                                    className="form__input"
                                    name="amount"
                                    onChange={[Function]}
                                    placeholder="Amount"
                                    type="text"
                                    value={100}
                        />
                        <label
                                    className="form__label"
                                    htmlFor="amount"
                        >
                                    Amount
                        </label>
            </div>
            <div
                        className="form__group form__group--25"
            >
                        <input
                                    className="form__input"
                                    name="unit"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    placeholder="Unit"
                                    type="text"
                                    value="grams"
                        />
                        <label
                                    className="form__label"
                                    htmlFor="unit"
                        >
                                    Unit
                        </label>
            </div>
</div>,
          <div
            className="form__row"
>
            <div
                        className="form__group form__group--25"
            >
                        <input
                                    className="form__input"
                                    name="carbohydrates"
                                    onChange={[Function]}
                                    placeholder="Carbs"
                                    type="text"
                                    value={0}
                        />
                        <label
                                    className="form__label"
                                    htmlFor="carbohydrates"
                        >
                                    Carbs
                        </label>
            </div>
            <div
                        className="form__group form__group--25"
            >
                        <input
                                    className="form__input"
                                    onChange={[Function]}
                                    placeholder="Protein"
                                    type="text"
                                    value={31}
                        />
                        <label
                                    className="form__label"
                                    htmlFor="Protein"
                        >
                                    Protein
                        </label>
            </div>
            <div
                        className="form__group form__group--25"
            >
                        <input
                                    className="form__input"
                                    onChange={[Function]}
                                    placeholder="Fat"
                                    type="text"
                                    value={3.6}
                        />
                        <label
                                    className="form__label"
                                    htmlFor="Fat"
                        >
                                    Fat
                        </label>
            </div>
            <div
                        className="form__group form__group--25"
            >
                        <input
                                    className="form__input"
                                    onChange={[Function]}
                                    placeholder="Calories"
                                    type="text"
                                    value={165}
                        />
                        <label
                                    className="form__label"
                                    htmlFor="Calories"
                        >
                                    Calories
                        </label>
            </div>
</div>,
          <div
            className="form__row"
>
            <div
                        className="form__group--right"
            >
                        <button
                                    className="btn btn--form"
                        >
                                    Submit
                        </button>
            </div>
</div>,
        ],
        "className": "form",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              Array [
                <div
                  className="form__group form__group--50"
>
                  <input
                                    className="form__input"
                                    name="name"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    placeholder="Food"
                                    type="text"
                                    value="Chicken Breast"
                  />
                  <label
                                    className="form__label"
                                    htmlFor="name"
                  >
                                    Food
                  </label>
</div>,
              ],
              Array [
                <div
                  className="form__group form__group--25"
>
                  <input
                                    className="form__input"
                                    name="amount"
                                    onChange={[Function]}
                                    placeholder="Amount"
                                    type="text"
                                    value={100}
                  />
                  <label
                                    className="form__label"
                                    htmlFor="amount"
                  >
                                    Amount
                  </label>
</div>,
                <div
                  className="form__group form__group--25"
>
                  <input
                                    className="form__input"
                                    name="unit"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    placeholder="Unit"
                                    type="text"
                                    value="grams"
                  />
                  <label
                                    className="form__label"
                                    htmlFor="unit"
                  >
                                    Unit
                  </label>
</div>,
              ],
            ],
            "className": "form__row",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "nameInput",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    className="form__input"
                    name="name"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Food"
                    type="text"
                    value="Chicken Breast"
/>,
                  <label
                    className="form__label"
                    htmlFor="name"
>
                    Food
</label>,
                ],
                "className": "form__group form__group--50",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "form__input",
                    "name": "name",
                    "onBlur": [Function],
                    "onChange": [Function],
                    "placeholder": "Food",
                    "type": "text",
                    "value": "Chicken Breast",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Food",
                    "className": "form__label",
                    "htmlFor": "name",
                  },
                  "ref": null,
                  "rendered": "Food",
                  "type": "label",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "amountInput",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    className="form__input"
                    name="amount"
                    onChange={[Function]}
                    placeholder="Amount"
                    type="text"
                    value={100}
/>,
                  <label
                    className="form__label"
                    htmlFor="amount"
>
                    Amount
</label>,
                ],
                "className": "form__group form__group--25",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "form__input",
                    "name": "amount",
                    "onChange": [Function],
                    "placeholder": "Amount",
                    "type": "text",
                    "value": 100,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Amount",
                    "className": "form__label",
                    "htmlFor": "amount",
                  },
                  "ref": null,
                  "rendered": "Amount",
                  "type": "label",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "unitInput",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    className="form__input"
                    name="unit"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Unit"
                    type="text"
                    value="grams"
/>,
                  <label
                    className="form__label"
                    htmlFor="unit"
>
                    Unit
</label>,
                ],
                "className": "form__group form__group--25",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "form__input",
                    "name": "unit",
                    "onBlur": [Function],
                    "onChange": [Function],
                    "placeholder": "Unit",
                    "type": "text",
                    "value": "grams",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Unit",
                    "className": "form__label",
                    "htmlFor": "unit",
                  },
                  "ref": null,
                  "rendered": "Unit",
                  "type": "label",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="form__group form__group--25"
>
                <input
                                className="form__input"
                                name="carbohydrates"
                                onChange={[Function]}
                                placeholder="Carbs"
                                type="text"
                                value={0}
                />
                <label
                                className="form__label"
                                htmlFor="carbohydrates"
                >
                                Carbs
                </label>
</div>,
              <div
                className="form__group form__group--25"
>
                <input
                                className="form__input"
                                onChange={[Function]}
                                placeholder="Protein"
                                type="text"
                                value={31}
                />
                <label
                                className="form__label"
                                htmlFor="Protein"
                >
                                Protein
                </label>
</div>,
              <div
                className="form__group form__group--25"
>
                <input
                                className="form__input"
                                onChange={[Function]}
                                placeholder="Fat"
                                type="text"
                                value={3.6}
                />
                <label
                                className="form__label"
                                htmlFor="Fat"
                >
                                Fat
                </label>
</div>,
              <div
                className="form__group form__group--25"
>
                <input
                                className="form__input"
                                onChange={[Function]}
                                placeholder="Calories"
                                type="text"
                                value={165}
                />
                <label
                                className="form__label"
                                htmlFor="Calories"
                >
                                Calories
                </label>
</div>,
            ],
            "className": "form__row",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "carbohydratesInput",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    className="form__input"
                    name="carbohydrates"
                    onChange={[Function]}
                    placeholder="Carbs"
                    type="text"
                    value={0}
/>,
                  <label
                    className="form__label"
                    htmlFor="carbohydrates"
>
                    Carbs
</label>,
                ],
                "className": "form__group form__group--25",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "form__input",
                    "name": "carbohydrates",
                    "onChange": [Function],
                    "placeholder": "Carbs",
                    "type": "text",
                    "value": 0,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Carbs",
                    "className": "form__label",
                    "htmlFor": "carbohydrates",
                  },
                  "ref": null,
                  "rendered": "Carbs",
                  "type": "label",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "proteinInput",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    className="form__input"
                    onChange={[Function]}
                    placeholder="Protein"
                    type="text"
                    value={31}
/>,
                  <label
                    className="form__label"
                    htmlFor="Protein"
>
                    Protein
</label>,
                ],
                "className": "form__group form__group--25",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "form__input",
                    "onChange": [Function],
                    "placeholder": "Protein",
                    "type": "text",
                    "value": 31,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Protein",
                    "className": "form__label",
                    "htmlFor": "Protein",
                  },
                  "ref": null,
                  "rendered": "Protein",
                  "type": "label",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "fatInput",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    className="form__input"
                    onChange={[Function]}
                    placeholder="Fat"
                    type="text"
                    value={3.6}
/>,
                  <label
                    className="form__label"
                    htmlFor="Fat"
>
                    Fat
</label>,
                ],
                "className": "form__group form__group--25",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "form__input",
                    "onChange": [Function],
                    "placeholder": "Fat",
                    "type": "text",
                    "value": 3.6,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Fat",
                    "className": "form__label",
                    "htmlFor": "Fat",
                  },
                  "ref": null,
                  "rendered": "Fat",
                  "type": "label",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "caloriesInput",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    className="form__input"
                    onChange={[Function]}
                    placeholder="Calories"
                    type="text"
                    value={165}
/>,
                  <label
                    className="form__label"
                    htmlFor="Calories"
>
                    Calories
</label>,
                ],
                "className": "form__group form__group--25",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "form__input",
                    "onChange": [Function],
                    "placeholder": "Calories",
                    "type": "text",
                    "value": 165,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Calories",
                    "className": "form__label",
                    "htmlFor": "Calories",
                  },
                  "ref": null,
                  "rendered": "Calories",
                  "type": "label",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="form__group--right"
>
              <button
                            className="btn btn--form"
              >
                            Submit
              </button>
</div>,
            "className": "form__row",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <button
                className="btn btn--form"
>
                Submit
</button>,
              "className": "form__group--right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Submit",
                "className": "btn btn--form",
              },
              "ref": null,
              "rendered": "Submit",
              "type": "button",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "form",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
